--- a/Class 02-html/pages/sucursales.html
+++ b/Class 02-html/pages/sucursales.html
@@ -1,2 +1,17 @@
-git init
-git add.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sucursales</title>
+</head>
+<body>
+    <h2>
+        Soy la pagína de sucursales
+    
+    </h2>
+    
+
+</body>
+</html>
