--- a/Class 02-html/pages/productos.html
+++ b/Class 02-html/pages/productos.html
@@ -13,17 +13,17 @@
         <h2> Soy la navegacion</h2>
         <!-- Listas desordenadas -->
         <ul>
-           <!-- item list -->
-           <li>
-           <!-- Anclas: Permiten la navegacion -->
-           <a href="../index.html">HOME</a>
-           </li>
-           <li>
-           <a href="./sucursales.html">SUCURSALES</a>
-           </li>
-           <li>
-           <a href="./productos.html">PRODUCTOS</a>
-           </li>
+            <!-- item list -->
+            <li>
+             <!-- Anclas: Permiten la navegacion -->
+            <a href="../index.html">HOME</a>
+            </li>
+            <li>
+            <a href="./sucursales.html">SUCURSALES</a>
+            </li>
+            <li>
+            <a href="./productos.html">PRODUCTOS</a>
+            </li>
         
         </ul>
     </nav>
@@ -44,12 +44,12 @@
             <br>
 
             <label for="Edad">Edad</label>
-            <input type="number" id="Edad" name="Edad"> 
+            <input type="number" id="Edad" name="Edad" required> 
 
             <br> 
 
             <label for="FechaNac">Fecha de nacimiento</label>
-            <input type="date" id="FechaNac" name="FechaNac">
+            <input type="date" id="FechaNac" name="FechaNac" required>
 
             <br>
 
@@ -82,7 +82,7 @@
 
             <input type="button" id="Ejemplo" value="Enviar datos"> 
 
-            <button type=" submit">Soy un boton y envio datos</button>
+            <button type="submit">Soy un boton y envio datos</button>
 
         </form>
 
