--- a/Class 02-html/index.html
+++ b/Class 02-html/index.html
@@ -8,11 +8,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"><!-- responsivo adapta la pag web al dispositivo -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/index.css">
-    <title>Html</title><!-- Titulo de la ventana del navegador -->
+    <link rel="stylesheet" href="./scss/estilos.scss">
+        <!-- Traemos el Font desde Google fonts -->
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Delicious+Handrawn&family=Noto+Sans+Miao&display=swap" rel="stylesheet"
+
+    
+        
+    <title></Html></title> <!-- Titulo de la ventana del navegador -->
+    <!-- Traemos el Font desde Google fonts --> 
     <style>
         p{  color: blue;
-            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            font-family: 'Noto Sans Miao', sans-serif;
 
         }
 
